доработан подьем проекта