@@ -7,6 +7,7 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.TimeoutException;
 import java.util.UUID;
+import java.util.Arrays;
 
 import shared.Producer;
 
@@ -24,16 +25,31 @@ public class SerialProducer {
             TimeoutException
     {
         String[] pathArray = {
-                "src/main/java/data/data_1MB",
+            "data/data_1MB",
+            "data/data_5MB",
+            "data/data_10MB",
+            "data/data_25MB",
+            "data/data_50MB",
+            "data/data_100MB",
         };
-        int all = 1;
-        UUID taskId = UUID.randomUUID();
-        Map<String, Object> map = new HashMap<>();
-        String content = Files.readString(Path.of("src/main/java/data/data_1MB"));
-        map.put("taskId", taskId);
-        map.put("all", all);
-        map.put("value", content);
-        this.messageProdcuer.produceMessage(map);
+        for (String path : pathArray) {
+            byte[] bytes = Files.readAllBytes(Path.of(path));
+            int totalSize = bytes.length;
+            int partSize = (int) Math.ceil(totalSize / 4.0);
+            UUID taskId = UUID.randomUUID();
+
+            for (int part = 0; part < 4; part++) {
+                int start = part * partSize;
+                int end = Math.min(start + partSize, totalSize);
+                if (start >= end) break;
+                byte[] chunk = Arrays.copyOfRange(bytes, start, end);
+                Map<String, Object> message = new HashMap<>();
+                message.put("taskId", taskId); 
+                message.put("all", 4); 
+                message.put("value", new String(chunk));
+                this.messageProdcuer.produceMessage(message);
+            }
+        }
         this.messageProdcuer.closeConnection();
     }
 }
